# anchor-30-1-scaffold

./: Anchor.toml  package.json  pnpm-lock.yaml
programs/spl-bug/: Cargo.toml
programs/spl-bug/src/: error.rs  lib.rs
programs/spl-bug/src/instructions/: increment.rs  make_offer.rs  take_offer.rs
programs/spl-bug/src/state/: page_visits.rs
tests/: spl-bug.ts
