[package]
name = "spl-bug"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_bug"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"]}
anchor-spl = "0.30.1"
# solana-program = "=1.18.17"
# spl-token-2022 = "=3.0.2"

# solana-zk-token-sdk = "2.0.1"